--- a/package.json
+++ b/package.json
@@ -62,7 +62,10 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.67"
+    "zod": "3.25.67",
+    "react-simple-maps": "3.0.0",
+    "d3-geo": "3.1.0",
+    "topojson-client": "3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
